# FA_Labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/src/: main.c
lab2/: CMakeLists.txt
lab2/src/: functions.c  functions.h  status_codes.h  tests.c
lab3/: CMakeLists.txt
lab3/src/: functions.c  functions.h  main.c  status_codes.h  tests.c
lab5/: CMakeLists.txt
lab5/src/: functions.h  main.c
lab6/src/: functions.c  functions.h  main.c  tests.c
lab8/: CMakeLists.txt
lab8/src/: converter.h
package1/lab1/src/: functions.c  functions.h  status_codes.h
package1/lab2/: CMakeLists.txt
package1/lab2/src/: functions.c  main.c
package1/lab3/src/: functions.c
package1/lab5/src/: functions.c  status_codes.h
package1/lab6/: CMakeLists.txt
package1/lab6/src/: main.c  status_codes.h  tests.c
package1/lab8/: CMakeLists.txt
package1/lab8/src/: converter.c  main.c  status_codes.h
package2/lab1/: CMakeLists.txt
package2/lab1/include/: functions.h  status_codes.h
package2/lab1/src/: functions.c  main.c
package2/lab1/tests/: tests.c
package2/lab2/: CMakeLists.txt
package2/lab2/include/: functions.h  status_codes.h
package2/lab2/src/: functions.c  main.c
package2/lab2/tests/: tests.c
package2/lab3/: CMakeLists.txt
package2/lab3/src/: main.c  (+1 more)
package2/lab4/: CMakeLists.txt
package2/lab5/: CMakeLists.txt
package2/lab6/: CMakeLists.txt
package3/lab1/: CMakeLists.txt
package3/lab2/: CMakeLists.txt
package3/lab3/: CMakeLists.txt
package3/lab4/: CMakeLists.txt
package3/lab6/: CMakeLists.txt
package3/lab7/: CMakeLists.txt
(+46 files in other folders)
