cmake_minimum_required(VERSION 3.23)
project(fundamental_algorithms)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_subdirectory(package1/lab1)
add_subdirectory(package1/lab2)
add_subdirectory(package1/lab3)
add_subdirectory(package1/lab5)
add_subdirectory(package1/lab6)
add_subdirectory(package1/lab8)
add_subdirectory(package2/lab1)
add_subdirectory(package2/lab2)
